[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/KenneyPixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/GameUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="GameUI" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
custom_constants/separation = 0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 28.0
margin_bottom = 144.0
rect_min_size = Vector2( 28, 0 )
custom_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 28.0
margin_bottom = 10.0
text = "Depth"

[node name="DepthLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 10.0
margin_right = 28.0
margin_bottom = 20.0
text = "9999 m"
clip_text = true

[node name="Control" type="Control" parent="."]
margin_left = 28.0
margin_right = 132.0
margin_bottom = 144.0
rect_min_size = Vector2( 104, 0 )
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 132.0
margin_right = 160.0
margin_bottom = 144.0
rect_min_size = Vector2( 28, 0 )
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Label2" type="Label" parent="VBoxContainer2"]
margin_right = 28.0
margin_bottom = 10.0
text = "Dirt"
align = 2

[node name="DirtLabel" type="Label" parent="VBoxContainer2"]
unique_name_in_owner = true
margin_top = 10.0
margin_right = 28.0
margin_bottom = 20.0
text = "9999 d"
align = 2
autowrap = true
